--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Stackoverflow App</string>
+    <string name="app_name">StackOverflow Questions</string>
     <string name="no_data">No data</string>
 </resources>
